--- a/index.html
+++ b/index.html
@@ -28,6 +28,20 @@
     />
     <meta property="og:image" content="/og-image-hostcar.png" />
     <meta property="og:type" content="website" />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-F740HZ8E8H"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-F740HZ8E8H");
+    </script>
   </head>
   <body>
     <div id="root"></div>
