--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="png" href="/public/favicon.png" />
+    <link rel="canonical" href="https://www.hostcar24h.com/" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
       HostCar24H — Plataforma de transporte confiable y UserHosts verificados
